--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@types/node": "^16.11.43",
         "@types/react": "^18.0.15",
         "@types/react-dom": "^18.0.6",
+        "@types/swiper": "^6.0.0",
         "axios": "^0.27.2",
         "formik": "^2.2.9",
         "react": "^18.2.0",
