--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@types/swiper": "^6.0.0",
         "axios": "^0.27.2",
         "formik": "^2.2.9",
+        "moment": "^2.29.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.3.0",
